fix a lot of backend stuffs (I can prolly explain in person)